fix: remove red outline on required input fields on firefox browsers

--- a/src/js/components/forms/input.scss
+++ b/src/js/components/forms/input.scss
@@ -7,6 +7,7 @@
     padding: 0 $padding-size;
     background-color: transparent;
     border: none;
+    box-shadow: none;
     display: block;
     margin: 0;
     width: 100%;
